syntax = "proto3";

option csharp_namespace = "DistributedKVStore";

service Store {
    rpc Get (KeyRequest) returns (ValueResponse);
    rpc Put (PutRequest) returns (PutResponse);
}

message KeyRequest {
    string key = 1;
}

message ValueResponse {
    string value = 1;
    bool found = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    string message = 1;
}
